--- a/src/components/base/style/skeleton.scss
+++ b/src/components/base/style/skeleton.scss
@@ -1,6 +1,22 @@
+$dim: #f1f1f1;
+$bright: #fdfdfd;
+
+@keyframes flashing {
+	0% {
+		background: $dim;
+	}
+	50% {
+		background: $bright;
+	}
+	100% {
+		background: $dim;
+	}
+}
+
 .skeleton {
 	min-width: 10rem;
 	width: 100%;
 	height: 2rem;
-	background: $background_variant;
+	background: $dim;
+	animation: flashing 2.5s infinite;
 }
