feat: support keydown tab for markdown editor

--- a/src/components/markdown/style/editor.scss
+++ b/src/components/markdown/style/editor.scss
@@ -41,7 +41,7 @@ $divider: $divider;
 		border-top: 1px solid $divider;
 		font-size: 1.4rem;
 
-		$article_padding: 1rem 1.5rem;
+		$article_padding: 1.5rem;
 
 		> article {
 			width: 50%;
