--- a/src/components/header/style/app_center.scss
+++ b/src/components/header/style/app_center.scss
@@ -12,3 +12,10 @@
 		padding: 2rem;
 	}
 }
+
+@media screen and (max-width: 600px) {
+	.app_center {
+		right: 1rem;
+		width: calc(100vw - 4rem);
+	}
+}
