--- a/src/components/modal/style/modal.scss
+++ b/src/components/modal/style/modal.scss
@@ -22,7 +22,15 @@
 	.content {
 		position: relative;
 		padding: 4rem;
+		max-width: 100vw;
 		width: 40rem;
 		border-radius: 0.6rem;
+	}
+
+	@media screen and (max-width: 600px) {
+		.content {
+			padding: 3rem;
+			width: calc(100vw - 6rem);
+		}
 	}
 }
