--- a/src/views/settings/style/account.scss
+++ b/src/views/settings/style/account.scss
@@ -36,4 +36,12 @@
 			font-weight: 500;
 		}
 	}
+
+	@media screen and (max-width: 600px) {
+		.username_wrapper {
+			span {
+				margin: 0 0.5rem;
+			}
+		}
+	}
 }
