--- a/src/views/settings/style/options.scss
+++ b/src/views/settings/style/options.scss
@@ -32,6 +32,7 @@
 			> span:first-child {
 				display: inline-flex;
 				align-items: center;
+				margin-right: 1rem;
 				color: $text_secondary;
 				font-weight: 500;
 			}
@@ -39,6 +40,15 @@
 			.form_item {
 				margin: 0;
 				max-width: 24rem;
+			}
+
+			@media screen and (max-width: 600px) {
+				.form_item {
+					textarea,
+					input {
+						min-width: 10rem;
+					}
+				}
 			}
 		}
 	}
