feat: ui media query

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -15,7 +15,9 @@ $divider_variant: rgba(#000, 0.05);
 $z_header: 100;
 $z_footer: 200;
 $z_sider: 300;
-$z_modal: 400;
+$z_mask: 400;
+$z_modal: 500;
+$z_notification: 600;
 
 $fast: 150ms;
 $normal: 250ms;
@@ -24,3 +26,5 @@ $slow: 350ms;
 $small_shadow: 0 1px 4px rgba(#000000, 0.05);
 $default_shadow: 1px 4px 24px rgba(#000000, 0.1);
 $large_shadow: 0 4px 32px rgba(#000000, 0.1);
+
+$breakpoint_small: 600px;
