--- a/src/components/base/style/message.scss
+++ b/src/components/base/style/message.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	top: 0;
 	left: 50%;
-	z-index: $z_modal;
+	z-index: $z_notification;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
