--- a/src/components/header/style/search.scss
+++ b/src/components/header/style/search.scss
@@ -64,7 +64,7 @@
 	}
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: $breakpoint_small) {
 	.search {
 		right: 1rem;
 		width: calc(100vw - 4rem);
