--- a/src/components/header/style/user_profile.scss
+++ b/src/components/header/style/user_profile.scss
@@ -58,7 +58,7 @@ $text_secondary: $text_secondary;
 	}
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: $breakpoint_small) {
 	.user_profile {
 		right: 1rem;
 		width: calc(100vw - 4rem);
