--- a/src/components/markdown/style/editor.scss
+++ b/src/components/markdown/style/editor.scss
@@ -1,5 +1,3 @@
-$divider: $divider;
-
 .markdown_editor {
 	height: calc(100vh - 5rem);
 
@@ -24,9 +22,22 @@ $divider: $divider;
 		}
 
 		.operation {
+			display: inline-flex;
+			align-items: center;
+			margin-left: 1rem;
+
+			button {
+				min-width: 4rem;
+			}
+
+			> span {
+				margin-left: 1rem;
+			}
+
 			.publish {
 				display: flex;
 				align-items: center;
+				margin-left: 1rem;
 				font-weight: 500;
 				font-size: 1.4rem;
 			}
@@ -47,8 +58,14 @@ $divider: $divider;
 			width: 50%;
 			height: 100%;
 
-			&:first-child {
-				border-right: 1px solid $divider;
+			&:last-child {
+				border-left: 1px solid $divider;
+			}
+		}
+
+		@media screen and (max-width: $breakpoint_small) {
+			> article {
+				width: 100%;
 			}
 		}
 
