--- a/src/components/modal/style/modal.scss
+++ b/src/components/modal/style/modal.scss
@@ -9,16 +9,6 @@
 
 	@include flex_center;
 
-	.mask {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-
-		@include glass;
-	}
-
 	.content {
 		position: relative;
 		padding: 4rem;
@@ -27,7 +17,7 @@
 		border-radius: 0.6rem;
 	}
 
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: $breakpoint_small) {
 		.content {
 			padding: 3rem;
 			width: calc(100vw - 6rem);
