--- a/src/components/page/style/index.module.scss
+++ b/src/components/page/style/index.module.scss
@@ -33,7 +33,7 @@
 		width: calc(100vw - 24rem);
 	}
 
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: $breakpoint_small) {
 		&.narrowing {
 			width: 100vw;
 		}
