--- a/src/views/articleDetail/style/index.module.scss
+++ b/src/views/articleDetail/style/index.module.scss
@@ -33,10 +33,16 @@
 			height: 5rem;
 
 			> div:first-child {
+				word-break: break-all;
+
 				> span {
-					margin-right: 3rem;
+					margin-right: 2rem;
 					color: $text_secondary;
 					font-size: 1.3rem;
+
+					&:last-child {
+						margin-right: 0;
+					}
 				}
 			}
 
