--- a/src/views/home/style/article_list.scss
+++ b/src/views/home/style/article_list.scss
@@ -118,7 +118,7 @@
 				object-fit: cover;
 			}
 
-			@media screen and (max-width: 600px) {
+			@media screen and (max-width: $breakpoint_small) {
 				.left_wrapper {
 					width: calc(100vw - 18rem);
 				}
