--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	align-items: center;
 	padding: 0 1rem 0 8rem;
-	width: 100%;
+	width: 100vw;
 	height: 5rem;
 	border-bottom: 1px solid $divider;
 	background: $background;
