--- a/src/components/modal/style/login.scss
+++ b/src/components/modal/style/login.scss
@@ -17,8 +17,10 @@
 		cursor: pointer;
 		transition: color $normal;
 
-		&:hover {
-			color: $highlight;
+		@media (any-hover: hover) {
+			&:hover {
+				color: $highlight;
+			}
 		}
 	}
 
