--- a/src/components/modal/style/profile.scss
+++ b/src/components/modal/style/profile.scss
@@ -41,8 +41,11 @@
 				> svg {
 					font-size: 4rem !important;
 				}
-				&:hover {
-					backdrop-filter: blur(24px);
+
+				@media (any-hover: hover) {
+					&:hover {
+						backdrop-filter: blur(24px);
+					}
 				}
 			}
 		}
