--- a/src/views/home/style/article_list.scss
+++ b/src/views/home/style/article_list.scss
@@ -82,8 +82,10 @@
 					font-size: 1.7rem;
 					transition: color $normal;
 
-					&:hover {
-						color: $highlight;
+					@media (any-hover: hover) {
+						&:hover {
+							color: $highlight;
+						}
 					}
 				}
 
@@ -96,8 +98,10 @@
 						white-space: nowrap;
 						font-size: 1.2rem;
 
-						&:first-child:hover {
-							text-decoration: underline !important;
+						@media (any-hover: hover) {
+							&:first-child:hover {
+								text-decoration: underline !important;
+							}
 						}
 					}
 				}
