--- a/src/components/modal/style/modal.scss
+++ b/src/components/modal/style/modal.scss
@@ -12,8 +12,8 @@
 	.content {
 		position: relative;
 		padding: 4rem;
-		min-width: 36rem;
-		max-width: 100vw;
+		min-width: 32rem;
+		max-width: 40rem;
 		width: 38rem;
 		border-radius: 0.6rem;
 	}
