--- a/src/views/settings/style/banner.scss
+++ b/src/views/settings/style/banner.scss
@@ -25,8 +25,10 @@
 			text-align: center;
 			font-weight: 500;
 
-			&:hover {
-				text-decoration: underline;
+			@media (any-hover: hover) {
+				&:hover {
+					text-decoration: underline;
+				}
 			}
 		}
 	}
