--- a/src/components/markdown/style/markdown.scss
+++ b/src/components/markdown/style/markdown.scss
@@ -22,7 +22,7 @@
 	}
 
 	p > code {
-		padding: 0.2rem 0.4rem;
+		padding: 0.4rem;
 		border-radius: 0.4rem;
 		background: $background_variant;
 
@@ -50,8 +50,7 @@
 		width: 100%;
 
 		> img {
-			max-width: 80%;
-			max-height: 500px;
+			max-width: 90%;
 		}
 	}
 }
