--- a/src/components/sider/style/index.module.scss
+++ b/src/components/sider/style/index.module.scss
@@ -1,39 +1,2 @@
 @import './menu.scss';
-
-$border: 1px solid $divider;
-$sider_width: 24rem;
-
-.sider {
-	position: fixed;
-	left: 0;
-	z-index: $z_sider;
-	width: $sider_width;
-	height: 100vh;
-	border-right: $border;
-	background: $background;
-	transition: transform $normal ease-out;
-	transform: translateX(-$sider_width);
-
-	&.open {
-		transform: translateX(0);
-	}
-
-	> .top {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		margin-bottom: 1rem;
-		padding: 0 1rem 0 2.4rem;
-		height: 5rem;
-		border-bottom: $border;
-
-		> .drawer_control {
-			position: absolute;
-			right: 1rem;
-
-			> svg {
-				font-size: 2rem;
-			}
-		}
-	}
-}
+@import './sider.scss';
