--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -7,8 +7,8 @@
 	padding: 0 1rem 0 8rem;
 	width: 100%;
 	height: 5rem;
-	border-bottom: 1px solid $divider;
 	background: $background;
+	box-shadow: 0 1px 2px rgba(#000000, 0.08);
 
 	@include glass;
 
@@ -32,10 +32,6 @@
 		> .btn {
 			position: relative;
 			margin-right: 1rem;
-
-			> svg {
-				font-size: 2rem;
-			}
 		}
 
 		> .go_login {
