--- a/src/components/page/style/index.module.scss
+++ b/src/components/page/style/index.module.scss
@@ -2,7 +2,7 @@
 	position: relative;
 	min-height: 100vh;
 	width: 100vw;
-	background: $background;
+	background: $background_variant;
 }
 
 .stable_page {
@@ -14,13 +14,13 @@
 .flexible_page {
 	display: flex;
 	justify-content: center;
-	padding-top: 5rem;
+	padding-top: 7rem;
 	transition: width $normal ease-out;
 
 	@extend .page;
 
 	.container {
-		padding-right: 25rem;
+		padding-right: 26rem;
 		max-width: 100%;
 		width: 110rem;
 	}
