--- a/src/views/articleCards/style/index.module.scss
+++ b/src/views/articleCards/style/index.module.scss
@@ -1,57 +1,2 @@
-.article_list_page {
-	padding: 1rem;
-	padding-top: 5rem;
-
-	&.fixed {
-		overflow: hidden;
-		padding-bottom: 0;
-		height: 100vh;
-	}
-
-	> div:first-child {
-		padding-right: 0;
-	}
-
-	.article_card_list {
-		display: flex;
-		flex-flow: wrap;
-		margin-top: 1rem;
-		width: 100%;
-	}
-
-	.skeleton_list {
-		min-height: calc(100vh - 7rem);
-
-		@extend .article_card_list;
-
-		.skeleton_card {
-			margin: 1rem;
-			min-width: 20rem;
-			width: calc(20% - 2rem);
-
-			.inner {
-				overflow: hidden;
-				width: 100%;
-				height: 100%;
-
-				> div {
-					margin-bottom: 1.6rem;
-
-					&:first-child {
-						height: 61.8%;
-					}
-					&:last-child {
-						margin-bottom: 0;
-						transform: translateX(-60%);
-					}
-				}
-			}
-		}
-
-		@media screen and (max-width: $breakpoint_small) {
-			.skeleton_card {
-				min-width: calc(50% - 2rem);
-			}
-		}
-	}
-}
+@import 'article_cards';
+@import 'article_card';
