--- a/src/views/articleDetail/style/index.module.scss
+++ b/src/views/articleDetail/style/index.module.scss
@@ -1,102 +1,7 @@
-.article_detail_wrapper {
-	overflow: hidden;
-	margin-bottom: 2rem;
-	border-radius: 0.6rem;
-	background: $background;
-	box-shadow: $small_shadow;
+@import 'article_detail.scss';
 
-	.article_content {
-		padding: 0 4rem 4rem 4rem;
-	}
-
-	.bg_pic {
-		width: 100%;
-		background: #fff;
-	}
-
-	.bg_skeleton {
-		width: 100%;
-		height: 36rem;
-		background: $background_variant;
-	}
-
-	.info {
-		padding: 2rem 4rem;
-
-		@include use_themes('.author') {
-			margin-bottom: 1rem;
-
-			> a {
-				color: $text_secondary !important;
-
-				@media (any-hover: hover) {
-					&:hover {
-						color: $highlight !important;
-					}
-				}
-			}
-		}
-
-		.article {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			width: 100%;
-
-			> div:first-child {
-				word-break: break-all;
-
-				> span {
-					margin-right: 2rem;
-					color: $text_secondary;
-					font-size: 1.3rem;
-
-					&:last-child {
-						margin-right: 0;
-					}
-				}
-			}
-
-			.tags_wrapper {
-				display: flex;
-
-				> div {
-					margin-left: 2rem;
-				}
-			}
-		}
-	}
-
-	.content_skeleton {
-		position: relative;
-		display: flex;
-		overflow: hidden;
-		flex-direction: column;
+.article_detail_page {
+	> div:first-child {
 		padding-top: 2rem;
-		width: 100%;
-		background: $background;
-
-		> div {
-			margin-bottom: 2.4rem;
-			height: 2.4rem;
-		}
-
-		> .heading {
-			height: 3.2rem;
-			transform: translateX(-60%);
-		}
-
-		> .content1 {
-			transform: translateX(10%);
-		}
-
-		> .content2 {
-			width: 95%;
-		}
-
-		> .content3 {
-			margin-bottom: 0;
-			transform: translateX(-50%);
-		}
 	}
 }
