--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -11,14 +11,15 @@
 	box-shadow: 0 1px 2px rgba(#000000, 0.08);
 
 	@include glass;
+	@media screen and (max-width: $breakpoint_small) {
+		padding-left: 7rem;
+	}
 
 	> .drawer_control {
 		position: absolute;
 		left: 2rem;
-	}
 
-	@media screen and (max-width: $breakpoint_small) {
-		> .drawer_control {
+		@media screen and (max-width: $breakpoint_small) {
 			left: 1rem;
 		}
 	}
