--- a/src/components/markdown/style/markdown.scss
+++ b/src/components/markdown/style/markdown.scss
@@ -60,7 +60,8 @@
 
 		> img:first-child {
 			display: block; // fix 底部间隙
-			width: 100%;
+			min-width: 30%;
+			max-width: 100%;
 			border-radius: 0.6rem;
 		}
 	}
