--- a/src/views/articleDetail/style/article_detail.scss
+++ b/src/views/articleDetail/style/article_detail.scss
@@ -1,5 +1,5 @@
 .article_detail_wrapper {
-	overflow: hidden;
+	overflow-x: auto;
 	margin-bottom: 2rem;
 	max-width: 100%;
 	border-radius: 0.6rem;
