--- a/src/views/settings/style/options.scss
+++ b/src/views/settings/style/options.scss
@@ -41,7 +41,7 @@
 				max-width: 24rem;
 			}
 
-			@media screen and (max-width: $breakpoint_small) {
+			@media screen and (max-width: $breakpoint_sm) {
 				.form_item {
 					textarea,
 					input {
