--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -27,4 +27,4 @@ $small_shadow: 0 1px 4px rgba(#000000, 0.08);
 $default_shadow: 1px 4px 24px rgba(#000000, 0.1);
 $large_shadow: 0 4px 32px rgba(#000000, 0.12);
 
-$breakpoint_small: 600px;
+$breakpoint_sm: 600px;
