--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -11,7 +11,7 @@
 	box-shadow: 0 1px 2px rgba(#000000, 0.08);
 
 	@include glass;
-	@media screen and (max-width: $breakpoint_small) {
+	@media screen and (max-width: $breakpoint_sm) {
 		padding-left: 7rem;
 	}
 
@@ -19,7 +19,7 @@
 		position: absolute;
 		left: 2rem;
 
-		@media screen and (max-width: $breakpoint_small) {
+		@media screen and (max-width: $breakpoint_sm) {
 			left: 1rem;
 		}
 	}
