--- a/src/components/header/style/user_profile.scss
+++ b/src/components/header/style/user_profile.scss
@@ -30,7 +30,7 @@
 	width: 28rem;
 	border-radius: 0.6rem;
 
-	@media screen and (max-width: $breakpoint_small) {
+	@media screen and (max-width: $breakpoint_sm) {
 		right: 1rem;
 		width: calc(100vw - 4rem);
 	}
