--- a/src/components/markdown/style/editor.scss
+++ b/src/components/markdown/style/editor.scss
@@ -10,7 +10,7 @@
 		height: 5rem;
 		background: $background_variant;
 
-		@media screen and (max-width: $breakpoint_small) {
+		@media screen and (max-width: $breakpoint_sm) {
 			padding: 0 1rem;
 		}
 
@@ -58,7 +58,7 @@
 			width: 50%;
 			height: 100%;
 
-			@media screen and (max-width: $breakpoint_small) {
+			@media screen and (max-width: $breakpoint_sm) {
 				width: 100%;
 			}
 
