--- a/src/components/modal/style/modal.scss
+++ b/src/components/modal/style/modal.scss
@@ -17,7 +17,7 @@
 		width: 38rem;
 		border-radius: 0.6rem;
 
-		@media screen and (max-width: $breakpoint_small) {
+		@media screen and (max-width: $breakpoint_sm) {
 			padding: 3rem;
 			width: calc(100vw - 6rem);
 		}
