--- a/src/components/page/style/index.module.scss
+++ b/src/components/page/style/index.module.scss
@@ -19,7 +19,7 @@
 
 	@extend .page;
 
-	@media screen and(max-width: $breakpoint_small) {
+	@media screen and(max-width: $breakpoint_sm) {
 		padding-top: 5rem;
 	}
 
@@ -37,7 +37,7 @@
 		width: calc(100vw - 24rem);
 	}
 
-	@media screen and (max-width: $breakpoint_small) {
+	@media screen and (max-width: $breakpoint_sm) {
 		&.narrowing {
 			width: 100vw;
 		}
