--- a/src/views/articleCards/style/article_card.scss
+++ b/src/views/articleCards/style/article_card.scss
@@ -73,7 +73,7 @@
 		}
 	}
 
-	@media screen and (max-width: $breakpoint_small) {
+	@media screen and (max-width: $breakpoint_sm) {
 		min-width: 50%;
 	}
 }
