--- a/src/views/articleCards/style/article_cards.scss
+++ b/src/views/articleCards/style/article_cards.scss
@@ -34,7 +34,7 @@
 			background: $background;
 			box-shadow: $small_shadow;
 
-			@media screen and (max-width: $breakpoint_small) {
+			@media screen and (max-width: $breakpoint_sm) {
 				min-width: calc(50% - 2rem);
 			}
 
