--- a/src/views/home/style/index.module.scss
+++ b/src/views/home/style/index.module.scss
@@ -3,7 +3,7 @@
 .home_page {
 	> div:first-child {
 		padding-top: 2rem;
-		@media screen and(max-width: $breakpoint_small) {
+		@media screen and(max-width: $breakpoint_sm) {
 			padding-top: 0;
 		}
 	}
