--- a/src/views/home/style/index.module.scss
+++ b/src/views/home/style/index.module.scss
@@ -6,5 +6,10 @@
 		@media screen and(max-width: $breakpoint_sm) {
 			padding-top: 0;
 		}
+
+		.home_wrapper {
+			min-height: calc(100vh - 6rem);
+			background: $background;
+		}
 	}
 }
