chore: comment should login

--- a/src/components/header/style/app_center.scss
+++ b/src/components/header/style/app_center.scss
@@ -40,8 +40,10 @@
 				cursor: pointer;
 				transition: background-color $normal;
 
-				&:hover {
-					background: $background_variant;
+				@media (any-hover: hover) {
+					&:hover {
+						background: $background_variant;
+					}
 				}
 
 				.inner {
