--- a/src/views/articleDetail/style/comments.scss
+++ b/src/views/articleDetail/style/comments.scss
@@ -5,6 +5,24 @@
 		padding: 1rem 2rem;
 	}
 
+	.go_login_wrapper {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		padding: 3rem;
+
+		> span {
+			display: inline-flex;
+			align-items: center;
+			margin-bottom: 4rem;
+
+			> strong {
+				margin-left: 1rem;
+				font-size: 1.5rem;
+			}
+		}
+	}
+
 	.add_review_wrapper {
 		textarea {
 			height: 10rem;
@@ -14,15 +32,6 @@
 			display: flex;
 			flex-direction: row-reverse;
 			padding: 1rem 0;
-
-			@include use_themes('.go_login') {
-				cursor: pointer;
-				transition: color $normal;
-				&:hover {
-					color: $highlight;
-					text-decoration: underline;
-				}
-			}
 		}
 	}
 }
