--- a/src/views/articleDetail/style/reviews.scss
+++ b/src/views/articleDetail/style/reviews.scss
@@ -34,7 +34,7 @@
 
 			.content {
 				display: block;
-				margin: 1rem 1rem 2rem 4rem;
+				margin: 0 1rem 2rem 5rem;
 				padding: 1rem;
 				border: 1px solid $divider;
 				border-radius: 1rem;
