--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -19,6 +19,14 @@
 	}
 }
 
+@mixin hide_scroll_bar {
+	-ms-overflow-style: none; /* IE/Edge */
+	scrollbar-width: none; /* Firefox */
+	&::-webkit-scrollbar {
+		display: none; /* Chrome Safari */
+	}
+}
+
 @mixin use_themes($base_name) {
 	@each $key, $value in $themes {
 		#{$base_name}_#{$key} {
