--- a/src/views/articleDetail/style/article_detail.scss
+++ b/src/views/articleDetail/style/article_detail.scss
@@ -6,6 +6,10 @@
 	background: $background;
 	box-shadow: $small_shadow;
 
+	&.loading {
+		margin-bottom: 0;
+	}
+
 	@media screen and(max-width: $breakpoint_sm) {
 		margin-bottom: 0;
 		border-radius: 0;
@@ -76,8 +80,9 @@
 	}
 
 	.skeleton_wrapper {
+		overflow: hidden;
 		padding: 4rem;
-		height: calc(100vh - 5rem);
+		height: calc(100vh - 7rem);
 
 		@media screen and(max-width: $breakpoint_sm) {
 			padding: 2rem;
