--- a/src/components/rightSider/style/author_panel.scss
+++ b/src/components/rightSider/style/author_panel.scss
@@ -47,8 +47,8 @@
 
 	.contact_wrapper {
 		display: flex;
-		justify-content: space-around;
-		padding: 0 2rem;
+		justify-content: space-between;
+		padding: 0 1rem;
 		width: 100%;
 
 		button {
