--- a/src/components/base/style/message.scss
+++ b/src/components/base/style/message.scss
@@ -15,8 +15,8 @@
 		padding: 0 1.2rem;
 		min-width: 12rem;
 		min-height: 4rem;
-		border-radius: 0.6rem;
-		box-shadow: $default_shadow;
+		border-radius: 0.4rem;
+		box-shadow: $middle_shadow;
 		color: white;
 		font-weight: 500;
 		font-size: 1.4rem;
