--- a/src/components/header/style/app_center.scss
+++ b/src/components/header/style/app_center.scss
@@ -5,7 +5,8 @@
 	padding: 0;
 	min-height: 33rem;
 	width: 32rem;
-	border-radius: 0.6rem;
+	border-radius: 0.4rem;
+	box-shadow: $middle_shadow;
 
 	@media screen and (max-width: $breakpoint_sm) {
 		right: 1rem;
@@ -36,7 +37,7 @@
 				position: relative;
 				width: 100%;
 				height: 100%;
-				border-radius: 0.6rem;
+				border-radius: 0.4rem;
 				cursor: pointer;
 				transition: background-color $normal;
 
@@ -55,7 +56,7 @@
 						margin: 1rem 0;
 						width: 4rem;
 						height: 4rem;
-						border-radius: 0.6rem;
+						border-radius: 0.4rem;
 						vertical-align: text-top;
 
 						object-fit: cover;
