--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -8,7 +8,7 @@
 	width: 100%;
 	height: 5rem;
 	background: $background;
-	box-shadow: 0 1px 2px rgba(#000000, 0.08);
+	box-shadow: 0 0 2px rgba($color: #000000, $alpha: 0.2);
 
 	@include glass;
 	@media screen and (max-width: $breakpoint_sm) {
