--- a/src/views/settings/style/banner.scss
+++ b/src/views/settings/style/banner.scss
@@ -2,12 +2,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin: 0 1rem 4rem 1rem;
+	margin: 0 0 4rem 0;
 	padding: 0 2rem;
 	height: 4rem;
-	border-radius: 0.6rem;
+	border-radius: 0.4rem;
 	background: $highlight;
-	box-shadow: $default_shadow;
+	box-shadow: $small_shadow;
 	color: $background;
 
 	> span {
